aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__if_elseif_statement.snap
---
source: aml-syntax/src/parser/tests.rs
expression: ast
---
nodes:
  - If:
      branches:
        - If:
            condition:
              Ident:
                value: condition
                location:
                  start_byte: 4
                  end_byte: 13
            then:
              - Text:
                  values:
                    - String:
                        value: "\"Hello\""
                        location:
                          start_byte: 23
                          end_byte: 30
                  attributes: []
                  children: []
                  text: "text \"Hello\""
                  location:
                    start_byte: 18
                    end_byte: 30
                  keyword:
                    start_byte: 18
                    end_byte: 22
            keyword:
              start_byte: 1
              end_byte: 3
            location:
              start_byte: 1
              end_byte: 30
            original: "if condition\n    text \"Hello\""
        - ElseIf:
            location:
              start_byte: 31
              end_byte: 35
            original: else
            if_node:
              condition:
                Ident:
                  value: condition
                  location:
                    start_byte: 39
                    end_byte: 48
              then:
                - Text:
                    values:
                      - String:
                          value: "\"World\""
                          location:
                            start_byte: 58
                            end_byte: 65
                    attributes: []
                    children: []
                    text: "text \"World\""
                    location:
                      start_byte: 53
                      end_byte: 65
                    keyword:
                      start_byte: 53
                      end_byte: 57
              keyword:
                start_byte: 36
                end_byte: 38
              location:
                start_byte: 36
                end_byte: 65
              original: "if condition\n    text \"World\""
        - Else:
            children:
              - Text:
                  values:
                    - String:
                        value: "\"!\""
                        location:
                          start_byte: 80
                          end_byte: 83
                  attributes: []
                  children: []
                  text: "text \"!\""
                  location:
                    start_byte: 75
                    end_byte: 83
                  keyword:
                    start_byte: 75
                    end_byte: 79
            location:
              start_byte: 66
              end_byte: 83
            keyword:
              start_byte: 66
              end_byte: 70
            original: "else\n    text \"!\""
      location:
        start_byte: 1
        end_byte: 83
      original: "if condition\n    text \"Hello\"\nelse if condition\n    text \"World\"\nelse\n    text \"!\""
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
  - variables: []
    parent: 0
  - variables: []
    parent: 0
