aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__malformed_if_elseif_statement.snap
---
source: aml-syntax/src/parser/tests.rs
expression: ast
---
nodes:
  - If:
      branches:
        - If:
            condition:
              Ident:
                value: condition
                location:
                  start_byte: 4
                  end_byte: 13
            then:
              - Text:
                  values:
                    - String:
                        value: "\"Hello\""
                        location:
                          start_byte: 23
                          end_byte: 30
                  attributes: []
                  children: []
                  text: "text \"Hello\""
                  location:
                    start_byte: 18
                    end_byte: 30
                  keyword:
                    start_byte: 18
                    end_byte: 22
            keyword:
              start_byte: 1
              end_byte: 3
            location:
              start_byte: 1
              end_byte: 30
            original: "if condition\n    text \"Hello\""
        - ElseIf:
            location:
              start_byte: 31
              end_byte: 35
            original: else
            if_node:
              condition:
                Error:
                  token: Newline
                  location:
                    start_byte: 38
                    end_byte: 39
                  original: "\n"
              then: []
              keyword:
                start_byte: 36
                end_byte: 38
              location:
                start_byte: 36
                end_byte: 39
              original: "if\n"
        - Else:
            children:
              - Text:
                  values:
                    - String:
                        value: "\"!\""
                        location:
                          start_byte: 70
                          end_byte: 73
                  attributes: []
                  children: []
                  text: "text \"!\""
                  location:
                    start_byte: 65
                    end_byte: 73
                  keyword:
                    start_byte: 65
                    end_byte: 69
            location:
              start_byte: 56
              end_byte: 73
            keyword:
              start_byte: 56
              end_byte: 60
            original: "else\n    text \"!\""
      location:
        start_byte: 1
        end_byte: 73
      original: "if condition\n    text \"Hello\"\nelse if\n    text \"World\"\nelse\n    text \"!\""
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
  - variables: []
    parent: 0
